--- a/contents/css/layout.css
+++ b/contents/css/layout.css
@@ -106,6 +106,17 @@ body.open .gnb_layout{left:0; transition:all 0.3s;}
 /* container */
 .container{padding-top:120px;}
 
+.artist_info{margin-top:25px; font-size:25px; color:#000; font-weight:700;}
+.artist_name{padding-right:17px; margin-right:10px; position:relative;}
+.artist_name:after{content:""; width:2px; height:16px; margin-top:-8px; background-color:#d5d5d5;
+  position:absolute; right:0; top:50%;
+}
+
+.art_info{margin-top:15px; font-size:20px; color:#999;}
+ 
+.art_display{margin-top:7px;font-size:20px; color:#19b3b8;}
+.art_display.no{color:#ff7448;}
+
 
 /* footer */
 .footer{padding-bottom:150px; border-top:1px solid #ececec;}
@@ -180,6 +191,10 @@ and (max-width : 767px)
 
 	/* container */
 	.container{padding-top:60px;}
+
+	.artist_info{font-size:22px;}
+	.art_info{margin-top:10px; font-size:16px;}	 
+	.art_display{margin-top:5px; font-size:16px;}
 
 
 	/* footer */
