--- a/contents/css/reset.css
+++ b/contents/css/reset.css
@@ -24,7 +24,7 @@ table{width:100%; border-collapse:collapse; border-spacing:0; table-layout:fixed
 
 a, a:hover, a:focus{text-decoration:none;}
 
-input, select, textarea, label{vertical-align:middle; border:0;}
+input, select, textarea, label{border:0; font-family:'Noto Sans', 'Noto Sans KR', 'Malgun Gothic', '맑은고딕', sans-serif; vertical-align:middle;}
 textarea{width:100%; height:100%; background-color:transparent; resize:none;}
 
 img{vertical-align:top;}
@@ -32,7 +32,9 @@ img{vertical-align:top;}
 select{-webkit-appearance:none; -moz-appearance:none; appearance:none;}
 select::-ms-expand{display:none;}
 
-button, input[type="button"]{background-color:transparent; border:0; cursor:pointer;}
+button, input[type="button"]{background-color:transparent; border:0; 
+  font-family:'Noto Sans', 'Noto Sans KR', 'Malgun Gothic', '맑은고딕', sans-serif; cursor:pointer;
+}
 
 .blind{position:absolute; left:-999em; top:-999em; font-size:0px; line-height:0px; height:0px;}
 .blind_tb{font-size:0px; line-height:0px; height:0px; text-indent:-9999px;}
