--- a/contents/css/sub.css
+++ b/contents/css/sub.css
@@ -34,10 +34,12 @@
   -webkit-transform:translate(-50%, -50%);
   -ms-transform:translate(-50%, -50%);
   transform:translate(-50%, -50%);
+  object-fit: contain; /* funny */
 }
 
-.feat_img img.landscape{max-width:none; height:100%; max-height:100%;}
-.feat_img img.portrait{width:100%; max-width:100%; max-height:none;}
+/*.feat_img img.landscape{max-width:none; height:100%; max-height:100%;}*/
+/*.feat_img img.portrait{width:100%; max-width:100%; max-height:none;}*/
+.feat_img img.landscape,.feat_img img.portrait{width:100%; height:100%;} /* funny */
 
 .art_controller_area{width:120px; height:30px; margin-left:-60px; background-color:rgba(0,0,0,0.7); border-radius:20px; 
   text-align:center; position:absolute; left:50%; bottom:40px; z-index:3;
@@ -768,7 +770,8 @@ and (max-width : 767px)
 
 	.layer_pop_area.term .btn_layer_area{justify-content:center;}
 
-
+	.review_layer_layout{width:100%; height:100%;} /* funny */
+	
 	/* 회원가입 완료 */
 	.text_signup{margin-top:30px; font-size:16px; line-height:26px;}
 
