--- a/contents/css/reset.css
+++ b/contents/css/reset.css
@@ -1,7 +1,7 @@
 @charset "utf-8";
 
 
-@import url('https://fonts.googleapis.com/css2?family=Manrope:wght@500&family=Noto+Sans+KR:wght@300;400;700&family=Noto+Sans:wght@400;700&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Manrope:wght@500&family=Noto+Sans+KR:wght@300;400;500;700&family=Noto+Sans:wght@400;700&display=swap');
 
 
 html, body, div, span, object, iframe, h1, h2, h3, h4, h5, h6, p, img, strong, dl, dt, dd, ol, ul, li, 
