--- a/contents/css/sub.css
+++ b/contents/css/sub.css
@@ -1209,7 +1209,7 @@ textarea.input_qna{height:300px; padding:10px; line-height:1.42;}
 .about_art_img1{height:51.39vw; margin-top:195px; margin-bottom:200px; overflow:hidden; position:relative;}
 .about_art_img1 img{width:100%; position:absolute; left:50%; top:50%; transform:translate(-50%, -50%);}
 
-.about_text_list{margin:0 180px 190px;}
+.about_text_list{margin:0 auto 190px;}
 .about_text_list li{float:left; width:29.62%; margin-left:5.55%; font-size:20px; line-height:35px; font-weight:300; letter-spacing:-0.03em;}
 .about_text_list li:first-child{margin-left:0;}
 .about_text_list li strong{display:block; padding-bottom:35px; margin-bottom:30px; border-bottom:2px solid #000; 
